src/objects/Related_Contact__c.object
<CustomObject>
    <description>Join object relating Contacts to RWE Studies and RWE Requests</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects / Requests</relationshipLabel>
        <relationshipName>RWE_Request_Contacts_DF</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>RWE_Related_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RWE_Tool_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tool Inventory</label>
        <referenceTo>Tool_Inventory__c</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>RWE_Related_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>RWE_Request_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Related Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RWE-RC-{000000000}</displayFormat>
        <label>Related Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>